[package]
name = "led_speakers"
version = "0.1.0"
authors = ["Anna Scholtz <anna@scholtzan.net>"]
edition = "2018"

[workspace]

[dependencies.web]

[dependencies]
bytes = "1.1.0"
byteorder = "1.3.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
actix-web = { version = "3.2.0", features=["openssl"] }
actix-rt = "1.1.1"
actix-cors = "0.5.1"
actix-service = "1.0.6"
actix-files = "0.4.1"
anyhow = "1.0.28"
config = "0.11"
openssl = { version = '0.10', features = ["vendored"] }
rustfft = "6.0.1"
typetag = "0.1"
dyn-clone = "1.0.4"
ws2818-rgb-led-spi-driver = "2.0.0"

[dependencies.pulse]
version = "2.0"
package = "libpulse-binding"
